<resources>
    <string name="app_name">Potter Guide</string>

    <!-- Activity SplashScreen -->
    <string name="activity_SplashScreeen_github">github.com/DevLeonardoTissi</string>
    <string name="activity_SplashScreeen_desenvolvidoPor">Desenvolvido por Leonardo Tissi</string>


    <!-- Activity Main -->
    <string name="activity_Main_botao_todosOsPersonagens">Todos os personagens</string>
    <string name="activity_Main_botao_alunos">Alunos</string>
    <string name="activity_Main_botao_funcionarios">Funcionários</string>
    <string name="activity_Main_botao_casas">Casas de Hogwarts </string>
    <string name="activity_Main_botao_feiticos">Feitiços </string>
    <string name="activity_Main_botao_livros">Livros da série </string>
    <string name="activity_Main_ViewPage_Personagens">Personagens</string>
    <string name="activity_Main_ViewPage_Feiticos">Feitiços</string>
    <string name="activity_Main_ViewPage_Livros">Livros</string>
    <string name="activity_Main_ViewPage_Casas">Casas de Hogwarts</string>


    <!-- Activity Detalhes do personagem -->
    <string name="activity_detalhes_Personagem_especie">Espécie:</string>
    <string name="activity_detalhes_Personagem_sexo">Sexo:</string>
    <string name="activity_detalhes_Personagem_casa">Casa:</string>
    <string name="activity_detalhes_Personagem_dataDeNascimento">Data de Nascimento:</string>
    <string name="activity_detalhes_Personagem_anoDeNascimento">Ano de Nascimento:</string>
    <string name="activity_detalhes_Personagem_mago">Mago:</string>
    <string name="activity_detalhes_Personagem_ancestralidade">Ancestralidade:</string>
    <string name="activity_detalhes_Personagem_corDosOlhos">Cor dos Olhos:</string>
    <string name="activity_detalhes_Personagem_corDoCabelo">Cor do Cabelo:</string>
    <string name="activity_detalhes_Personagem_patrono">Patrono:</string>
    <string name="activity_detalhes_Personagem_estudante">Estudante:</string>
    <string name="activity_detalhes_Personagem_funcionario">Funcionário:</string>
    <string name="activity_detalhes_Personagem_ator">Ator:</string>
    <string name="activity_detalhes_Personagem_vivo">Vivo:</string>


    <!-- Dialog Detalhes do livro -->
    <string name="alertDialog_editora">Editora: </string>
    <string name="alertDialog_dataDePublicacao">Publicação:</string>
    <string name="alertDialog_numeroDePaginas">Número de páginas: </string>
    <string name="alertDialog_categorias">Categorias:</string>
    <string name="alertDialog_idiomas">Idiomas:</string>


    <!-- Activity Livros -->
    <string name="activity_livros_titulo">Livros</string>
    <string name="activity_livros_buscarLivros">Buscar Livro</string>

    <!-- Activity Casas -->
    <string name="activity_casas_titulo">Casas de Hogwarts</string>

    <!-- Activity Detalhes Casa -->
    <string name="activity_detalhe_casa_botaoDetalhes">Ver Alunos desta casa</string>

    <string name="activity_detalhe_casa_detalhesGrifinoria">Simbolizada por um leão e pelas cores vermelho e dourado, a Grifinória é dirigida pela Professora Minerva McGonagall. As principais características do membro da casa são a nobreza, a ousadia e a coragem. Não é à toa, por exemplo, que Harry Potter e seus amigos estão nessa casa.
Grifinórios também são pessoas calorosas e amigáveis, portanto, com corações dispostos a assumir riscos por aqueles que amam.
Além disso, o fantasma da casa é o Sir Nicholas de Mimsy-Porpington, também conhecido como “Nick Quase-Sem-Cabeça”.u fantasma residente é o Barão Sangrento.</string>

    <string name="activity_detalhe_casa_detalhesSonserina">A casa de Salazar Slytherin é dirigida pelo Professor Severo Snape e valoriza ambição, astúcia e individualismo.
Por causa disso, sonserinos se assemelham a grifinórios na paixão que carregam pelas atividades que assumem. Por outro lado, eles são capazes de tudo para chegar à seus objetivos, valorizando muito mais o individualismo do que o companheirismo.
É uma das casas de Hogwarts que mais produziu bruxos das trevas. Apesar disso, não existe uma relação direta entre os dois fatos.
Por fim, a casa tem as cores verde e prata, além de ser simbolizada por uma cobra. Seu fantasma residente é o Barão Sangrento.</string>

    <string name="activity_detalhe_casa_detalhesCorvinal">A casa dos que possuem inteligência, originalidade, espirituosidade e criatividade. Corvinal tem as cores azul e bronze, águia como símbolo e o Professor Fílio Flitwick como diretor.
Os corvinais valorizam o conhecimento e utilizam sua curiosidade para conquistá-lo. Apesar da mente alerta, no entanto, o desejo de saber muitas vezes pode ser mal compreendido, como no caso de Luna Lovegood.</string>

    <string name="activity_detalhe_casa_detalhesLufaLufa">Diferente das outras casas, a Lufa-lufa não se guia por características excludentes. Isso porque a casa enaltece valores como bondade, amor e empatia acima de todas as outras coisas. Sendo assim, com um texugo símbolo e as cores amarelo e preto, é a mais acolhedora entre as casas de Hogwarts.
Por fim, seu fantasma é o Frei Gorducho e a Professora diretora é Pomona Sprout.</string>

    <string name="activity_detalhes_casa_grifinoria">Detalhes Gryffindor</string>
    <string name="activity_detalhes_casa_sonserina">Detalhes Slyntherin</string>
    <string name="activity_detalhes_casa_lufalufa">Detalhes Hufflepuff</string>
    <string name="activity_detalhes_casa_corvinal">Detalhes Ravenclaw</string>


    <!-- Fragment Personagens  -->
    <string name="fragment_Personagens_menuitem_searchView">Buscar Personagem</string>

    <!-- Fragment Livros  -->
    <string name="fragment_Livros_menuitem_searchView">Buscar Livros</string>

    <!-- Fragment Feiticos  -->
    <string name="fragment_Feiticos_menuitem_searchView">Buscar Feiticos</string>


    <!-- Activity Personagens  -->
    <string name="activity_Personagens_buscarPersonagens">Buscar Personagem</string>
    <string name="activity_Personagens_titulo_todosPersonagens">Todos os Personagens</string>
    <string name="activity_Personagens_titulo_alunos">Alunos</string>
    <string name="activity_Personagens_titulo_alunosFuncionarios">Funcionários</string>
    <string name="activity_Personagens_titulo_alunosGrifinoria">Alunos de Grifinória</string>
    <string name="activity_Personagens_titulo_alunosSonserina">Alunos de Sonserina</string>
    <string name="activity_Personagens_titulo_alunosLufa_Lufa">Alunos de Lufa-Lufa</string>
    <string name="activity_Personagens_titulo_alunosCorvinal">Alunos de Corvinal</string>


    <!-- Activity Feitiços  -->
    <string name="activity_Feiticos_titulo">Feitiços</string>
    <string name="activity_Feiticos_buscarFeiticos">Buscar Feitiço</string>


    <!-- Common  -->
    <string name="common_erro_atualicao">Não foi possível buscar atualizações</string>
    <string name="common_falhaCarregamento">Falha no carregamento. Verifique sua conexão com a Internet.</string>
    <string name="imagempersonagemCarregado">ImagemPersonagemCarregado</string>
    <string name="common_ok">OK</string>
    <string name="common_nao">Não</string>
    <string name="common_sim">Sim</string>
    <string name="common_false">false</string>
    <string name="common_true">true</string>


    <string name="menuItem_grifinoria">Gryffindor</string>
    <string name="menuItem_sonserina">Slyntherin</string>
    <string name="menuItem_corvinal">Ravenclaw</string>
    <string name="menuItem_lufa_lufa">Hufflepuff</string>
    <string name="menuItem_todosOsPersonagens">Todos</string>
    <string name="common_buscar">Buscar</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>